# SeekWish

./: .gitignore  CLAUDE.md  HANDOFF_PROMPT.md  Makefile  README.md  companion.py  vercel.json
api/: _extractors.py  _plugin_init.py  _supabase.py  account.py  extract.py  pending.py  playlists.py  plugin.py  spotify_page.py  sync.py
audiophile-wishlist-project/: .gitignore  LICENSE  pyproject.toml
audiophile-wishlist-project/audiophile_wishlist/: PLUGININFO  __init__.py
audiophile_wishlist/: __init__.py
docs/: wireframes.html
public/: index.html
tests/: test_plugin.py
