[project]
name = "seekwish"
version = "2026.3.16"
description = "Nicotine+ plugin for audiophile-grade wishlist filtering and playlist import"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [{ name = "Thomas" }]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "SIM", "TCH"]
ignore = [
    "E501",     # line too long — handled by formatter
    "B904",     # raise from — not always needed
    "SIM108",   # ternary — readability preference
]

[tool.ruff.lint.isort]
known-third-party = ["pynicotine"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportMissingImports = "warning"
